--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --verde: #2fcbd6;
     --branco: #FFFFFF;
     --botao-ativo: #2fcbd6;
-    --botao-inativo: rgba(58, 55, 94, 0.5);
+    --botao-inativo: #252688;
     --texto-de-fundo: rgba(58, 55, 94, 0.3);
 }
 
