--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Suranna&display=swap');
 :root { 
     --cor-de-fundo: #1E1E1E;
-    --verde: #2fcbd6;
+    --verde: #3a8388;
     --branco: #FFFFFF;
     --botao-ativo: #2fcbd6;
     --botao-inativo: #48535c;
