--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Suranna&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root { 
     --cor-de-fundo: #1E1E1E;
     --verde: #2fcbd6;
@@ -11,7 +11,7 @@
 body {
     background-color: var(--cor-de-fundo);
     color: var(--branco);
-    font-family: "Suranna", serif;
+    font-family: "Kanit", sans-serif;
 }
 
 .conteudo-principal {
@@ -35,7 +35,7 @@ body {
 }
 
 .botao {
-    font-family: "Suranna", serif;
+    font-family: "Kanit", sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
